welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: value !== is not a member of Integer
  if (a!== b) {
       ^sumDouble:5: error: type mismatch;
 found   : Unit
 required: Integer
    if (a==b) {
    ^